--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="grit-section">
       <div class="grit-section__head">
         <h1 class="page-title">그릿에듀</h1>
-        <p class="desc">대한민국 교육의 새로운 표준</p>
+        <p class="home-subdesc">대한민국 교육의 새로운 표준</p>
       </div>
       <div id="gritInstructorsPreview" class="grit-grid"></div>
     </section>
