fix: unify page widths, improve lightbox display, fix login menu, enhance mobile navigation

--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main class="grit-section">
+  <main class="grit-page-container">
     <h1>갤러리</h1>
     <div class="grit-filter" data-for="gallery">
       <button class="on" data-group="all">전체</button>
