--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </header>
 
-  <main>
+  <main class="grit-page-container">
     <section class="grit-hero">
       <img src="/assets/banner_main.png" alt="그릿에듀 배너">
     </section>
