--- a/instructor.html
+++ b/instructor.html
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main class="grit-section" style="max-width:1080px;margin:0 auto;padding:16px">
+  <main class="grit-page-container">
     <div id="profile"></div>
   </main>
 
