--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main class="auth-wrap">
+  <main class="grit-page-container">
     <section class="auth-card" aria-labelledby="login-title">
       <h1 id="login-title">로그인</h1>
       <p class="desc">그릿에듀 계정으로 로그인하세요.</p>
