--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main class="grit-section">
+  <main class="grit-page-container">
     <h1 class="page-title">문의</h1>
 
     <section>
