--- a/instructors.html
+++ b/instructors.html
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main class="container" style="margin-top:64px;">
+  <main class="grit-page-container">
     <h1>그릿에듀 강사진</h1>
 
     <div class="grit-filter" role="tablist" aria-label="강사진 필터" data-for="instructors">
