--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main class="container" style="padding:24px; margin-top:64px;">
+  <main class="grit-page-container">
     <h1 style="margin:0 0 16px; font-size:24px; font-weight:800;">내 강의실</h1>
 
     <!-- 프로필 -->
