--- a/story.html
+++ b/story.html
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main class="grit-section">
+  <main class="grit-page-container">
     <h1 class="page-title">그릿에듀 이야기</h1>
 
     <section>
